<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textStyle="bold"
        android:textColor="@color/cardinal"
        android:id="@+id/weight_text"
        android:layout_gravity="center_horizontal" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/weight_hint"
        android:inputType="numberDecimal"
        android:id="@+id/edit_weight"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textStyle="bold"
        android:textColor="@color/cardinal"
        android:id="@+id/height_text"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/height_hint"
        android:inputType="numberDecimal"
        android:id="@+id/edit_height"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_meter"
            android:id="@+id/meter_button"
            android:checked="true" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_centimeter"
            android:id="@+id/centimeter_button"/>
    </RadioGroup>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/function"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcul_button"
        android:id="@+id/calcul_button"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raz_button"
        android:id="@+id/raz_button"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="3"
        android:text="@string/result_text"
        android:id="@+id/result_text"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/big_button"
        android:gravity="center"
        android:text="@string/hello"/>
</LinearLayout>